CSS layout of hero and aside

--- a/css/main.css
+++ b/css/main.css
@@ -132,8 +132,50 @@ header nav ul li{
 /*---- Mobile-Home page main ----*/
 
 /*-------------- Hero area ---------------*/
+.hero-area{
+
+}
+
+.hero-area h2{
+
+}
+
+.hero-area img{
+
+}
 
 /*------------- Newsletter area ----------------*/
+aside{
+
+}
+
+aside .content-wrapper{
+
+}
+
+aside .form-description{
+
+}
+
+aside .form-description h3{
+
+}
+
+aside .form-description p{
+
+}
+
+aside .form{
+
+}
+
+aside .form h3{
+
+}
+
+aside .form form{
+
+}
 
 /*------------ Highlights of Retreat --------------*/
 
