CSS layout highlights section

--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,27 @@ aside .form form{
 }
 
 /*------------ Highlights of Retreat --------------*/
+.features{
+
+}
+
+.features .content-wrapper{
+
+}
+
+article{
+
+}
+
+article .fontawesome-icon{
+
+}
+
+article .feature-items-description{
+  
+}
+
+
 
 /*------------ Previous Retreats -----------------*/
 
