Started reviews css layout

--- a/css/main.css
+++ b/css/main.css
@@ -195,12 +195,19 @@ article .fontawesome-icon{
 }
 
 article .feature-items-description{
-  
+
 }
 
 
 
 /*------------ Previous Retreats -----------------*/
+.reviews{
+
+}
+
+.reviews .content-wrapper{
+
+}
 
 
 /*---- Mobile-About page main ----*/
