Started About pg CSS layout

--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,17 @@ article .feature-items-description{
 /*---- Mobile-About page main ----*/
 
 /*----------- Mission area ---------------*/
+.mission{
+
+}
+
+.mission .content-wrapper{
+
+}
+
+.mission .content-wrapper .mission-content{
+
+}
 
 /*------------ Map area --------------*/
 
