CSS layout about pg contact info

--- a/css/main.css
+++ b/css/main.css
@@ -244,10 +244,47 @@ article .feature-items-description{
 
 }
 
+.mission .content-wrapper .mission-content h1{
+
+}
+
+.mission .content-wrapper .mission-content p{
+
+}
+
 /*------------ Map area --------------*/
+.map{
+
+}
 
 /*------------ Contact information --------------*/
+.contact{
 
+}
+
+.contact .content-wrapper{
+
+}
+
+.contact .content-wrapper h2{
+
+}
+
+.contact .content-wrapper address{
+
+}
+
+.contact .content-wrapper address div{
+
+}
+
+.contact .content-wrapper address div h3{
+  
+}
+
+.contact .content-wrapper address div p{
+
+}
 
 /*---- Mobile-FAQ page main ----*/
 
